# chat_api

./: Cargo.toml  README.md  docker-compose.yaml
migrations/: 20241219213749_add_user_table.up.sql  20241223182003_friendships_and_friendships_requests_tables.down.sql  20241223182003_friendships_and_friendships_requests_tables.up.sql  20241225173810_add_discussions_and_user_discussion_tables.down.sql  20241225173810_add_discussions_and_user_discussion_tables.up.sql
src/: features.rs  main.rs  middlewares.rs  models.rs  payloads.rs  repositories.rs  routes.rs  token.rs
src/features/: friendship_request.rs
src/features/auth/: login.rs
src/features/auth/login/: login_controller.rs  login_controller_request.rs  login_controller_request_factory.rs  login_controller_service.rs
src/features/friendship/: create.rs
src/features/friendship_request/: accept.rs  create.rs  decline.rs
src/features/friendship_request/accept/: accept_friendship_request_controller.rs  (+2 more)
src/features/user/: create.rs
src/middlewares/: auth_middleware.rs  sender_is_user_middleware.rs
src/models/: discussion.rs  friendship.rs  friendship_request.rs  message.rs  user.rs
src/payloads/: create_friendship_request_payload.rs  create_user_payload.rs  user_payload.rs
src/repositories/: discussions_repository.rs  friend_repository.rs  friendship_request_repository.rs  message_repository.rs  query_factories.rs  user_repository.rs
src/repositories/query_factories/: discussion_query_factory.rs  friendship_query_factory.rs  friendship_request_query_factory.rs  user_query_factory.rs
(+11 files in other folders)
