[package]
name = "chat_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-identity = "0.8.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
sqlx = { version = "0.8.2" , features = [
    "mysql",
    "runtime-tokio",
    "chrono"
]}
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
validator = { version = "0.16.0", features = ["derive"] }
serde_json = "1.0.133"
argon2 = "0.5.3"
base64 = "0.22.1"
